# OpenTopia

./: .env.example  .gitignore  Cargo.toml  Code_Work_Mode_Desktop_Agent_Analysis_2026-07-17.docx  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/electron/: browser-host-smoke.cjs  browser-host.cjs  codex-sandbox-manifest.json  main.cjs  preload.cjs  updater.cjs
apps/desktop/src/: App.tsx  main.tsx  platform.ts  providerImport.test.ts  providerImport.ts  taskNotifications.ts  types.ts
apps/desktop/src/api/: client.ts
apps/desktop/src/components/: ApprovalDialog.css  ApprovalDialog.tsx  ArtifactGallery.tsx  BrowserPanel.tsx  ComputerPanel.tsx  LogViewer.tsx  MonacoEditor.tsx  MonacoEditorImpl.tsx  PlanChoiceCard.css  PlanChoiceCard.tsx  PreviewHost.tsx  RightContextRail.tsx  SettingsPanel.tsx  SkillCreatorDialog.css  SkillCreatorDialog.tsx  TurnActivityTimeline.css  TurnActivityTimeline.tsx  WebPreviewSurface.tsx  WorkbenchPanel.tsx  XtermTerminal.tsx
apps/desktop/src/styles/: app.css  right-context-rail.css
crates/opentopia-cli/: Cargo.toml
crates/opentopia-cli/src/: main.rs
crates/opentopia-core/: Cargo.toml
crates/opentopia-core/examples/: browser_observation_smoke.rs  codex_browser_control_smoke.rs
crates/opentopia-core/src/: agent.rs  agent_profiles.rs  base_agent_prompt.md  browser.rs  computer.rs  context_sources.rs  desktop_browser.rs  execution.rs  git_workflow.rs  guardian.rs  guardian_policy_template.md  instructions.rs  lib.rs  mcp.rs  mcp_host.rs  model.rs  model_context.rs  plugins.rs  policy.rs  preview.rs  provider.rs  sandbox.rs  settings.rs  skill_authoring.rs  skills.rs  spreadsheet.rs  store.rs  subagents.rs  tools.rs  workspace.rs
crates/opentopia-server/: Cargo.toml
crates/opentopia-server/src/: auth.rs  main.rs  turn_changes.rs  turns.rs
docs/: ai-coding-work-agent-architecture.md  application-agent-evaluation-framework.md  architecture-detailed.md  browser-computer-use-technical-design.md  chatgpt-trae-harness-prompt-comparison-zh.md  codex-harness-parity-implementation.md  codex-like-context-runtime-2026-07-20.md  codex-rollout-prompts-summary.md  codex-rollout-prompts-zh-cn.md  evaluation-system.md  implementation-backlog.md  mcp-sandbox-implementation-plan.md  model-request-observability-and-harness-notes.md  multi-agent-architecture-analysis.md  mvp-implementation.md  source-adaptation-map.md  web-search-api.md  web-search.md
docs/adr/: 0001-mvp-shell-and-runtime.md
docs/evaluations/: glm-5.2-long-horizon-2026-07-16.json  glm-5.2-long-horizon-2026-07-16.md  glm-5.2-long-horizon-retry-2026-07-16.json  glm-5.2-long-horizon-suite-2026-07-16.json
scripts/: build-desktop.cmd  build-desktop.ps1  check.ps1  configure-provider-safe-storage.cjs  configure-provider-safe-storage.ps1  dev-env.ps1  dev-server.cmd  evaluate-long-horizon-suite.ps1  evaluate-long-horizon.ps1  probe-openai-compatible.ps1  verify-context-summary.cmd  verify-context-summary.ps1  verify-integration.cmd  verify-integration.ps1  verify-server.cmd  verify-server.ps1
scripts/fixtures/long-horizon/: grader.cjs  task.json
scripts/fixtures/long-horizon/config-migration/: grader.cjs  task.json
scripts/fixtures/long-horizon/config-migration/seed/: SPEC.md  package.json
scripts/fixtures/long-horizon/config-migration/seed/src/: cli.js  config.js
scripts/fixtures/long-horizon/config-migration/seed/test/: contract.test.js
scripts/fixtures/long-horizon/dependency-planner/: grader.cjs  task.json
scripts/fixtures/long-horizon/dependency-planner/seed/: SPEC.md  package.json
scripts/fixtures/long-horizon/dependency-planner/seed/src/: cli.js  planner.js
scripts/fixtures/long-horizon/dependency-planner/seed/test/: contract.test.js
scripts/fixtures/long-horizon/seed/: SPEC.md  package.json
scripts/fixtures/long-horizon/seed/src/: cli.js  ledger.js
scripts/fixtures/long-horizon/seed/test/: contract.test.js
