[package]
name = "opentopia-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
opentopia-core = { path = "../opentopia-core" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
