[package]
name = "opentopia-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
calamine = "0.36"
chrono.workspace = true
futures-util = "0.3"
rusqlite.workspace = true
reqwest.workspace = true
rust_xlsxwriter = "0.96"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
